--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea/*
 examples/hexagon/bin/**/*
 examples/hexagon/bin/*
+examples/**/*.a
+examples/**/*.o
+examples/**/*.generator
+examples/**/*.exe
