--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .idea/*
-examples/hexagon/bin/**/*
-examples/hexagon/bin/*
-examples/**/*.a
-examples/**/*.o
-examples/**/*.generator
-examples/**/*.exe
-examples/**/*~
-examples/**/compiled/**/*
+benchmarks/hexagon/bin/**/*
+benchmarks/hexagon/bin/*
+benchmarks/**/*.a
+benchmarks/**/*.dep
+benchmarks/**/*.zo
+benchmarks/**/*.o
+benchmarks/**/*.generator
+benchmarks/**/*.exe
+benchmarks/**/*~
+benchmarks/**/compiled/*
