--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .idea/*
-benchmarks/hexagon/bin/**/*
-benchmarks/hexagon/bin/*
+benchmarks/**/*.bc
+benchmarks/**/*.s
+benchmarks/**/*.out
 benchmarks/**/*.a
 benchmarks/**/*.bak
 benchmarks/**/*.dep
 benchmarks/**/*.zo
 benchmarks/**/*.o
-benchmarks/**/*.generator
+benchmarks/**/*_generator
 benchmarks/**/*.exe
 benchmarks/**/*~
 benchmarks/**/compiled/**/*
