--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
 .idea/*
-benchmarks/**/*.bc
-benchmarks/**/*.s
-benchmarks/**/*.out
-benchmarks/**/*.a
-benchmarks/**/*.dep
-benchmarks/**/*.zo
-benchmarks/**/*.o
-benchmarks/**/*_generator
-benchmarks/**/*.exe
-benchmarks/**/*~
+**/*~
 **/*.bak
+benchmarks/**/bin/*
 rake/**/compiled/**/*
