--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Halide-master-d48fbde/include/Halide.h.gch/Halide.test.gch
 *.o
 Halide-master-d48fbde/.vs/**/*
 Halide-master-d48fbde/.vs/slnx.sqlite
+Halide-master-d48fbde/.vs/slnx.sqlite
