--- a/benchmarks/hexagon/rake/Makefile
+++ b/benchmarks/hexagon/rake/Makefile
@@ -1,7 +1,7 @@
-HALIDE_DIR ?= ../../../Halide-master-d48fbde/distrib
+HALIDE_DIR ?= ../../../../Halide/distrib
 
-HEXAGON_SIM ?= /home/maaz/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-sim
-HEXAGON_CLANG ?= /home/maaz/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-clang++
+#HEXAGON_SIM ?= /home/maaz/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-sim
+#HEXAGON_CLANG ?= /home/maaz/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-clang++
 
 benchmarks = simple \
 			 gaussian3x3 \
@@ -29,6 +29,9 @@ bin_dirs = $(addsuffix /bin,$(benchmarks))
 out_dirs = $(addsuffix /out,$(benchmarks))
 prof_dirs = $(addsuffix /profile,$(benchmarks))
 
+hannk = hannk/common_halide.cpp \
+	    hannk/interpreter/elementwise_program.cpp
+
 .PHONY: clean all $(benchmarks)
 
 all: $(benchmarks)
@@ -37,6 +40,7 @@ $(benchmarks): %: %/bin %/out %/profile
 	g++ --std=c++11 -fno-rtti -O3 -DLOG2VLEN=7 \
 		-I $(HALIDE_DIR)/include -I $(HALIDE_DIR)/tools \
 		-g $@/src/$@_generator.cpp $(HALIDE_DIR)/tools/GenGen.cpp \
+		$(hannk) \
 		-o $@/bin/$@_generator \
 		-L $(HALIDE_DIR)/lib -lHalide -ldl -lpthread -lz -lrt -ltinfo
 
@@ -45,17 +49,17 @@ $(benchmarks): %: %/bin %/out %/profile
 		-g $@ -e static_library,stmt,h,llvm_assembly,assembly \
 		-f $@_hvx128 target=hexagon-32-noos-no_bounds_query-no_asserts-hvx_128
 
-	$(HEXAGON_CLANG) \
-		-D$@  \
-		--std=c++11 -mhvx -mv66 -mhvx-length=128B \
-		-I $(HALIDE_DIR)/include -I ./$@/bin \
-		test/run.cpp \
-		test/stubs.cpp \
-		$@/bin/$@_hvx128.a \
-		$(HALIDE_DIR)/../src/runtime/hexagon_remote/bin/v62/libsim_qurt.a -lhexagon \
-		-o $@/bin/$@_run.out
+	#$(HEXAGON_CLANG) \
+	#	-D$@  \
+	#	--std=c++11 -mhvx -mv66 -mhvx-length=128B \
+	#	-I $(HALIDE_DIR)/include -I ./$@/bin \
+	#	test/run.cpp \
+	#	test/stubs.cpp \
+	#	$@/bin/$@_hvx128.a \
+	#	$(HALIDE_DIR)/../src/runtime/hexagon_remote/bin/v62/libsim_qurt.a -lhexagon \
+	#	-o $@/bin/$@_run.out
 
-	$(HEXAGON_SIM) -mv66 --memfill 0x0 --simulated_returnval --nullptr=2 --timing $@/bin/$@_run.out -- 1920 1080 ../test_vectors/football1920x1080.bin $@/out/out.bin
+	#$(HEXAGON_SIM) -mv66 --memfill 0x0 --simulated_returnval --nullptr=2 --timing $@/bin/$@_run.out -- 1920 1080 ../test_vectors/football1920x1080.bin $@/out/out.bin
 	
 	rm -f pmu_statsfile.txt stats_dump.iss.0
 
