--- a/benchmarks/hexagon/rake/Makefile
+++ b/benchmarks/hexagon/rake/Makefile
@@ -3,6 +3,10 @@ HALIDE_DIR ?= ../../../../Halide/distrib
 HEXAGON_SIM ?= /home/maaz/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-sim
 HEXAGON_CLANG ?= /home/maaz/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-clang++
 
+#ifndef HALIDE_DIR
+#$(error HALIDE_DIR is not set)
+#endif
+
 benchmarks = simple \
 			 gaussian3x3 \
 			 gaussian5x5 \
@@ -52,17 +56,17 @@ $(benchmarks): %: %/bin %/out %/profile
 		-g $@ -e static_library,stmt,h,llvm_assembly,assembly \
 		-f $@_hvx128 target=hexagon-32-noos-no_bounds_query-no_asserts-hvx_128
 
-	#$(HEXAGON_CLANG) \
-	#	-D$@  \
-	#	--std=c++17 -mhvx -mv66 -mhvx-length=128B \
-	#	-I $(HALIDE_DIR)/include -I ./$@/bin \
-	#	test/run.cpp \
-	#	test/stubs.cpp \
-	#	$@/bin/$@_hvx128.a \
-	#	$(HALIDE_DIR)/../src/runtime/hexagon_remote/bin/v65/libsim_qurt.a -lhexagon \
-	#	-o $@/bin/$@_run.out
+	$(HEXAGON_CLANG) \
+		-D$@  \
+		--std=c++17 -mhvx -mv66 -mhvx-length=128B \
+		-I $(HALIDE_DIR)/include -I ./$@/bin \
+		test/run.cpp \
+		test/stubs.cpp \
+		$@/bin/$@_hvx128.a \
+		$(HALIDE_DIR)/../src/runtime/hexagon_remote/bin/v65/libsim_qurt.a -lhexagon \
+		-o $@/bin/$@_run.out
 
-	#$(HEXAGON_SIM) -mv66 --memfill 0x0 --simulated_returnval --nullptr=2 --timing $@/bin/$@_run.out -- 1920 1080 ../test_vectors/football1920x1080.bin $@/out/out.bin
+	$(HEXAGON_SIM) -mv66 --memfill 0x0 --simulated_returnval --nullptr=2 --timing $@/bin/$@_run.out -- 1920 1080 ../test_vectors/football1920x1080.bin $@/out/out.bin
 	
 	rm -f pmu_statsfile.txt stats_dump.iss.0
 
