Cleaning up stale files

--- a/benchmarks/hexagon/rake/Makefile
+++ b/benchmarks/hexagon/rake/Makefile
@@ -1,5 +1,5 @@
-#HALIDE_DIR ?= ../../../../Halide/distrib
-HALIDE_DIR ?= ../../../../../Software/Halide-12.0.1/distrib
+HALIDE_DIR ?= ../../../../rake-halide/distrib
+#HALIDE_DIR ?= ../../../../../Software/Halide-12.0.1/distrib
 
 HEXAGON_SIM ?= /home/maaz/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-sim
 HEXAGON_CLANG ?= /home/maaz/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-clang++
@@ -45,6 +45,8 @@ prof_dirs = $(addsuffix /profile,$(benchmarks))
 hannk = hannk/common_halide.cpp \
 	    hannk/interpreter/elementwise_program.cpp
 
+sim=false
+
 .PHONY: clean all $(benchmarks) elementwise
 
 all: $(benchmarks)
@@ -62,19 +64,21 @@ $(benchmarks): %: %/bin %/out %/profile
 		-g $@ -e static_library,stmt,h,llvm_assembly,assembly \
 		-f $@_hvx128 target=hexagon-32-noos-no_bounds_query-no_asserts-hvx_128-hvx_v66
 
+ifeq ($(sim),true)
 	$(HEXAGON_CLANG) \
-		-D$@  \
+		-D$@ \
 		--std=c++17 -mhvx -mv66 -mhvx-length=128B \
 		-I $(HALIDE_DIR)/include -I ./$@/bin \
 		test/run.cpp \
 		test/stubs.cpp \
 		$@/bin/$@_hvx128.a \
-		../../../../Halide/src/runtime/hexagon_remote/bin/v65/libsim_qurt.a -lhexagon \
-		-o $@/bin/$@_run.out
+		$(HALIDE_DIR)/../src/runtime/hexagon_remote/bin/v65/libsim_qurt.a -lhexagon \
+		-o $@/bin/$@_run.out;
 
 	$(HEXAGON_SIM) -mv66 --memfill 0x0 --simulated_returnval --nullptr=2 --timing $@/bin/$@_run.out -- 1920 1080 ../test_vectors/football1920x1080.bin $@/out/out.bin
-	
+
 	rm -f pmu_statsfile.txt stats_dump.iss.0
+endif
 
 elementwise: %: %/bin %/out %/profile
 	g++ --std=c++17 -fno-rtti -O3 -DLOG2VLEN=7 \
