--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Halide-master-d48fbde/.vs/slnx.sqlite
 *.db
 *.sqlite
 Halide-master-d48fbde/.vs/Halide-master-d48fbde/v16/.suo
+rake/notes/Algorithm.md
