--- a/benchmarks/hexagon/halide/Makefile
+++ b/benchmarks/hexagon/halide/Makefile
@@ -1,5 +1,5 @@
-HALIDE_DIR ?= ../../../../rake-halide/distrib
-#HALIDE_DIR ?= ../../../../../Software/Halide-12.0.1/distrib
+#HALIDE_DIR ?= ../../../../rake-halide/distrib
+HALIDE_DIR ?= ../../../../halide/distrib
 
 HEXAGON_SIM ?= ../../../../../../software/Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-sim
 HEXAGON_CLANG ?= ../../../../../../software//Qualcomm/Hexagon_SDK/3.5.2/tools/HEXAGON_Tools/8.3.07/Tools/bin/hexagon-clang++
@@ -53,10 +53,40 @@ $(benchmarks): %: %/bin %/out %/profile
 		-g $@/src/$@_generator.cpp $(HALIDE_DIR)/tools/GenGen.cpp \
 		$(hannk) \
 		-o $@/bin/$@_generator \
-		-L $(HALIDE_DIR)/lib -lHalide $(shell $(llvm-config) --system-libs --link-static)
+		-L $(HALIDE_DIR)/lib -lHalide $(shell llvm-config-12 --system-libs --link-static)
 
 	export LD_LIBRARY_PATH=$(HALIDE_DIR)/lib; ./$@/bin/$@_generator \
 		-o $@/bin \
+		-g $@ -e static_library,stmt,h,llvm_assembly,assembly \
+		-f $@_hvx128 target=hexagon-32-noos-no_bounds_query-no_asserts-hvx_128-hvx_v66
+
+ifeq ($(sim),true)
+	$(HEXAGON_CLANG) \
+		-D$@ \
+		--std=c++17 -mhvx -mv66 -mhvx-length=128B \
+		-I $(HALIDE_DIR)/include -I ./$@/bin \
+		test/run.cpp \
+		test/stubs.cpp \
+		$@/bin/$@_hvx128.a \
+		$(HALIDE_DIR)/../src/runtime/hexagon_remote/bin/v65/libsim_qurt.a -lhexagon \
+		-o $@/bin/$@_run.out;
+
+	$(HEXAGON_SIM) -mv66 --memfill 0x0 --simulated_returnval --nullptr=2 --timing $@/bin/$@_run.out -- 1920 1080 ../test_vectors/football1920x1080.bin $@/out/out.bin
+
+	rm -f pmu_statsfile.txt stats_dump.iss.0
+endif
+
+fully_connected: %: %/bin %/out %/profile
+	g++ --std=c++17 -fno-rtti -O3 -DLOG2VLEN=7 \
+		-I $(HALIDE_DIR)/include -I $(HALIDE_DIR)/tools \
+		-g $@/src/$@_generator.cpp $(HALIDE_DIR)/tools/GenGen.cpp \
+		$(hannk) \
+		-o $@/bin/$@_generator \
+		-L $(HALIDE_DIR)/lib -lHalide $(shell llvm-config-12 --system-libs --link-static)
+
+	export LD_LIBRARY_PATH=$(HALIDE_DIR)/lib; ./$@/bin/$@_generator \
+		-o $@/bin \
+		-g $@ output.type=uint8 \
 		-g $@ -e static_library,stmt,h,llvm_assembly,assembly \
 		-f $@_hvx128 target=hexagon-32-noos-no_bounds_query-no_asserts-hvx_128-hvx_v66
 
@@ -82,7 +112,7 @@ elementwise: %: %/bin %/out %/profile
 		-g $@/src/$@_generator.cpp $(HALIDE_DIR)/tools/GenGen.cpp \
 		$(hannk) \
 		-o $@/bin/$@_generator \
-		-L $(HALIDE_DIR)/lib -lHalide $(shell $(llvm-config) --system-libs --link-static)
+		-L $(HALIDE_DIR)/lib -lHalide $(shell llvm-config --system-libs --link-static)
 
 	export LD_LIBRARY_PATH=$(HALIDE_DIR)/lib; ./$@/bin/$@_generator \
 		-o $@/bin \
@@ -92,35 +122,7 @@ elementwise: %: %/bin %/out %/profile
 	
 	rm -f pmu_statsfile.txt stats_dump.iss.0
 
-fully_connected: %: %/bin %/out %/profile
-	g++ --std=c++17 -fno-rtti -O3 -DLOG2VLEN=7 \
-		-I $(HALIDE_DIR)/include -I $(HALIDE_DIR)/tools \
-		-g $@/src/$@_generator.cpp $(HALIDE_DIR)/tools/GenGen.cpp \
-		$(hannk) \
-		-o $@/bin/$@_generator \
-		-L $(HALIDE_DIR)/lib -lHalide $(shell $(llvm-config) --system-libs --link-static)
-
-	export LD_LIBRARY_PATH=$(HALIDE_DIR)/lib; ./$@/bin/$@_generator \
-		-o $@/bin \
-		-g $@ output.type=uint8 \
-		-e static_library,stmt,h,llvm_assembly,assembly \
-		-f $@_hvx128 target=hexagon-32-noos-no_bounds_query-no_asserts-hvx_128-hvx_v66
-	
-	$(HEXAGON_CLANG) \
-		-D$@  \
-		--std=c++17 -mhvx -mv66 -mhvx-length=128B \
-		-I $(HALIDE_DIR)/include -I ./$@/bin \
-		test/run.cpp \
-		test/stubs.cpp \
-		$@/bin/$@_hvx128.a \
-		../../../../Halide/src/runtime/hexagon_remote/bin/v65/libsim_qurt.a -lhexagon \
-		-o $@/bin/$@_run.out
-
-	$(HEXAGON_SIM) -mv66 --memfill 0x0 --simulated_returnval --nullptr=2 --packet_analyze $@/bin/$@_run.out -- 1920 1080 ../test_vectors/football1920x1080.bin $@/out/out.bin
-	
-	rm -f pmu_statsfile.txt stats_dump.iss.0
-
-$(prof_dirs) $(out_dirs) $(bin_dirs): %:
+$(prof_dirs) $(out_dirs) $(bin_dirs) fully_connected/bin fully_connected/out fully_connected/profile: %:
 	mkdir $@
 
 clean:
