Gaussian7x7 added for ARM
Spec files available in test folder

--- a/benchmarks/arm/Makefile
+++ b/benchmarks/arm/Makefile
@@ -3,6 +3,7 @@ HALIDE_DIR ?= ../../../rake-halide/distrib
 
 benchmarks = gaussian3x3 \
 			 gaussian5x5 \
+			 gaussian7x7 \
 			 add
 
 bin_dirs = $(addsuffix /bin,$(benchmarks))
