--- a/benchmarks/arm/Makefile
+++ b/benchmarks/arm/Makefile
@@ -5,6 +5,7 @@ benchmarks = gaussian3x3 \
 			 gaussian5x5 \
 			 gaussian7x7 \
 			 conv3x3a16 \
+			 conv3x3a32 \
 			 add
 
 bin_dirs = $(addsuffix /bin,$(benchmarks))
