Dilate3x3 benchmark added for ARM

--- a/benchmarks/arm/Makefile
+++ b/benchmarks/arm/Makefile
@@ -6,6 +6,7 @@ benchmarks = gaussian3x3 \
 			 gaussian7x7 \
 			 conv3x3a16 \
 			 conv3x3a32 \
+			 dilate3x3 \
 			 add
 
 bin_dirs = $(addsuffix /bin,$(benchmarks))
