Sobel3x3 benchmark added for ARM

--- a/benchmarks/arm/Makefile
+++ b/benchmarks/arm/Makefile
@@ -8,6 +8,7 @@ benchmarks = gaussian3x3 \
 			 conv3x3a32 \
 			 dilate3x3 \
 			 median3x3 \
+			 sobel3x3 \
 			 add
 
 bin_dirs = $(addsuffix /bin,$(benchmarks))
