MaxPool benchmark added for ARM

--- a/benchmarks/arm/Makefile
+++ b/benchmarks/arm/Makefile
@@ -11,6 +11,7 @@ benchmarks = gaussian3x3 \
 			 sobel3x3 \
 			 blur3x3 \
 			 add \
+			 max_pool \
 			 matmul
 
 bin_dirs = $(addsuffix /bin,$(benchmarks))
