--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Halide-master-d48fbde/.vs/slnx.sqlite
 *.sqlite
 Halide-master-d48fbde/.vs/Halide-master-d48fbde/v16/.suo
 rake/notes/Algorithm.md
+hexagon_sdk_lnx_3_5_installer_eval_00003_1.zip
