Fix ARM load increments

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ rake/**/compiled/**/*
 Halide-master-d48fbde/include/Halide.h.gch/Halide.default.gch
 Halide-master-d48fbde/include/Halide.h.gch/Halide.test.gch
 *.o
+*.out
+*.runtimes
 Halide-master-d48fbde/.vs/**/*
 Halide-master-d48fbde/.vs/slnx.sqlite
 Halide-master-d48fbde/.vs/slnx.sqlite
